--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,16 +1,44 @@
-<h1> My To Do List</h1>
-<a href="{% url 'task-create' %}">Add Task</a>
+{% extends 'base/main.html' %}
+
+{% block content %}
+{% if request.user.is_authenticated %}
+    <p>{{request.user}}</p>
+    <a href="{% url 'logout' %}">Logout</a>
+
+{% else %}
+    <a href="{% url 'login' %}">Login</a>
+{% endif %}
+
+
+
+
+<h1>TODO LIST</h1>
+<a href="{%url 'task-create' %}">Add Task</a>
+
+<form method="GET">
+    <input type='text' name='search-area' value={{search_input}}>
+    <input type='submit' value='Search'>
+</form>
+
+
 <table>
     <tr>
-        <th>Item</th>
-        <th></th>
+        <th> Item </th>
+        <th> </th>
+ 
     </tr>
-    {% for task in object_list %}
+
+    {% for task in tasks %}
     <tr>
         <td>{{task.title}}</td>
-        <td><a href="{% url 'task' task.id %}">View</a></td>
+        <td><a href="{% url 'task' task.id %}"> View</a></td>
+        <td><a href="{% url 'task-update' task.id %}"> Edit</a></td>
+        <td><a href="{% url 'task-delete' task.id %}"> Delete</a></td>
     </tr>
     {% empty %}
-    <h3>No items in list</h3>
+        
+        <h3>No items in list </h3>
+
     {% endfor %}
-</table>
+
+{% endblock content %}
